[gd_scene load_steps=5 format=3 uid="uid://rli145wb33rv"]

<<<<<<< HEAD:scenes/menu_screen.tscn
[ext_resource type="Script" path="res://scenes/menu_screen.gd" id="1_e6vgv"]
[ext_resource type="Theme" path="res://scenes/Theme_Menu.tres" id="1_yft84"]
=======
[ext_resource type="Script" uid="uid://bao6ufm11uhum" path="res://scripts/menu_screen.gd" id="1_e6vgv"]
[ext_resource type="Theme" uid="uid://d24nj8be86yrq" path="res://scenes/Theme_Menu.tres" id="1_yft84"]
>>>>>>> 7ed9116e0f994f6c7fe97eed1614c69b8e9d2ffd:scenes/screens/menu_screen.tscn

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pn7wg"]
bg_color = Color(0, 0.827448, 0.191791, 0.654902)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm2ni"]
bg_color = Color(0.929634, 0.307432, 0.325732, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6vgv")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = -111.25
offset_right = 336.213
offset_bottom = 111.25
grow_vertical = 2
theme = ExtResource("1_yft84")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_pn7wg")
text = "First minigame"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 820.0
offset_top = -111.25
offset_right = 1097.21
offset_bottom = 111.25
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Third minigame"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.607
offset_top = -111.25
offset_right = 138.607
offset_bottom = 111.25
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_sm2ni")
text = "Second minigame"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
